--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "backend server for an API project at Driven coding bootcamp",
   "main": "back.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -15,7 +16,8 @@
     "dotenv": "^14.3.2",
     "express": "^4.17.2",
     "joi": "^17.6.0",
-    "mongodb": "^4.3.1"
+    "mongodb": "^4.3.1",
+    "string-strip-html": "^9.1.6"
   },
   "devDependencies": {}
 }
